# DSL

./: .clang-format  .gitignore  .rubocop.yml  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
ci-extra/: build.sh  test.sh
cmake/: Bundler.cmake  CompilerConfig.cmake  CompilerOptions.cmake  QEMU.cmake  dependencies.cmake  discover_generated_tests.cmake.in
cmake/toolchain/: riscv.cmake
code_gen/: cpp_gen.rb
docs/ir/: instruction.md
lib/: CMakeLists.txt  ir_gen.rb
lib/ADL/: base.rb  builder.rb  scope.rb  value.rb  var.rb
lib/Utility/: helper_cpp.rb
sim_gen/: CMakeLists.txt  sim_gen.rb
sim_gen/CPUState/: cpu_state.rb
sim_gen/Decoders/: decoder.rb
sim_gen/ExecEngines/: base_exec_engine.rb  naive_interpreter.rb
sim_gen/Hart/: hart.rb
sim_gen/ISA/: isa.rb
sim_gen/MemoryModels/: memory.rb
sim_gen/Utility/: sim_utility.rb
sim_lib/: CMakeLists.txt  base_jit.cc  base_jit.hh  elf_loader.cc  elf_loader.hh  jit_factory.cc  jit_factory.hh  memory.cc  memory.hh  sim.cc
test/: CMakeLists.txt
test/CodeGenTests/: simple_tests.rb
test/SimTests/: CMakeLists.txt
test/SimTests/C/: CMakeLists.txt  CRunTests.py
test/SimTests/C/CImpl/: CMakeLists.txt
test/SimTests/C/CImpl/fib/: CMakeLists.txt  fib.c
test/SimTests/C/CImpl/qsort/: CMakeLists.txt  dataset1.h  qsort.c
test/SimTests/Common/: CMakeLists.txt  RunTests.py
test/SimTests/SnippetBased/: CMakeLists.txt
test/SimTests/SnippetBased/SnippetBasedImpl/: CMakeLists.txt  InitTestGen.rb  TestGen.rb  compile-and-run.sh  compile-dir.sh
test/SimTests/SnippetBased/SnippetBasedImpl/Parsers/: QEMUParser.rb
